welcome.lessons.welcome.loopfor.LoopCourse.scala.code
for(i<-1 to 10){b

avance();
avance();
avance();
avance();
avance();
avance();
avance();
avance();
while(estFaceMur){
	gauche();
}
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
while(estFaceMur){
	gauche();
}
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();

 while(estFaceMur){
	gauche();
} 
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();

